// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReleaseTasks synthesizes correctly with custom options 1`] = `
{
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "build": {
        "description": "Full release build",
        "name": "build",
        "steps": [
          {
            "spawn": "default",
          },
          {
            "spawn": "pre-compile",
          },
          {
            "spawn": "compile",
          },
          {
            "spawn": "post-compile",
          },
          {
            "spawn": "test",
          },
          {
            "spawn": "package",
          },
        ],
      },
      "compile": {
        "description": "Only compile",
        "name": "compile",
      },
      "default": {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": {
        "description": "Remove projen from the project",
        "env": {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": [
          {
            "spawn": "default",
          },
        ],
      },
      "package": {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "release:custom": {
        "description": "Release a new version by calculating next tag/version, generating changelogs, documentation, commiting, tagging and pushing these changes/tag to the repo.",
        "name": "release:custom",
        "steps": [
          {
            "spawn": "release:custom:pre",
          },
          {
            "spawn": "release:custom:next-tag",
          },
          {
            "spawn": "release:custom:generate",
          },
          {
            "spawn": "release:custom:git-push",
          },
          {
            "spawn": "release:custom:post",
          },
        ],
      },
      "release:custom:generate": {
        "description": "Generates documentation, special files etc. Placeholder for customizations",
        "name": "release:custom:generate",
      },
      "release:custom:git-push": {
        "description": "Commit all files, git tag with calculated release tag and push it to remote git",
        "name": "release:custom:git-push",
        "steps": [
          {
            "exec": "npx -y monotag@1.14.0 tag-push --git-email="test@example.com" --git-username="testuser"",
          },
        ],
      },
      "release:custom:next-tag": {
        "description": "Calculate next tag and version of the software and display on console. No git operations are performed, but depending on the configurations, changelog, version, tag an notes might be written to files. Supports complex release tagging in monorepos by using "npx monotag"",
        "name": "release:custom:next-tag",
        "steps": [
          {
            "exec": "npx -y monotag@1.14.0 notes --git-email="test@example.com" --git-username="testuser"",
          },
        ],
      },
      "release:custom:post": {
        "description": "Executed after all release tasks. Placeholder for customizations",
        "name": "release:custom:post",
      },
      "release:custom:pre": {
        "description": "Executed before any release tasks. Placeholder for customizations",
        "name": "release:custom:pre",
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`ReleaseTasks synthesizes correctly with default options 1`] = `
{
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "build": {
        "description": "Full release build",
        "name": "build",
        "steps": [
          {
            "spawn": "default",
          },
          {
            "spawn": "pre-compile",
          },
          {
            "spawn": "compile",
          },
          {
            "spawn": "post-compile",
          },
          {
            "spawn": "test",
          },
          {
            "spawn": "package",
          },
        ],
      },
      "compile": {
        "description": "Only compile",
        "name": "compile",
      },
      "default": {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": {
        "description": "Remove projen from the project",
        "env": {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": [
          {
            "spawn": "default",
          },
        ],
      },
      "package": {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "release": {
        "description": "Release a new version by calculating next tag/version, generating changelogs, documentation, commiting, tagging and pushing these changes/tag to the repo.",
        "name": "release",
        "steps": [
          {
            "spawn": "release:pre",
          },
          {
            "spawn": "release:next-tag",
          },
          {
            "spawn": "release:generate",
          },
          {
            "spawn": "release:post",
          },
        ],
      },
      "release:generate": {
        "description": "Generates documentation, special files etc. Placeholder for customizations",
        "name": "release:generate",
      },
      "release:next-tag": {
        "description": "Calculate next tag and version of the software and display on console. No git operations are performed, but depending on the configurations, changelog, version, tag an notes might be written to files. Supports complex release tagging in monorepos by using "npx monotag"",
        "name": "release:next-tag",
        "steps": [
          {
            "exec": "npx -y monotag@1.14.0 notes ",
          },
        ],
      },
      "release:post": {
        "description": "Executed after all release tasks. Placeholder for customizations",
        "name": "release:post",
      },
      "release:pre": {
        "description": "Executed before any release tasks. Placeholder for customizations",
        "name": "release:pre",
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;
